Work has been done in order start a basic version of the catalogue, display details info of one event. Function to generate the qrcode of a ticket has been implemented basically. It was a general work without the intention of perfection in order to test the feasability of the whole project. Keep working ongit statusgit status!

--- a/etc_home.html
+++ b/etc_home.html
@@ -18,11 +18,27 @@
     <button id="create-event-btn">Create an event</button>
 
     <h2>Catalogue events</h2>
-    <div class="catalogue-event">
-        <div class="event-unit">
-            <span>Event title</span>
-            <span><button>Details</button></span>
-        </div>
+    <div class="catalogue-event" id="idCatalogue">
+
+        <!--div class="event-unit" id="id-">
+            <div class="unit-head">
+                <img src="media/icons/pro.png"/>
+                <span class="user_infos">
+                    <span>Username</span>
+                    <span>Address user</span>
+                </span>
+            </div>
+            <div class="poster-display">
+                <img src="media/posters/belPrestans.jpg"/>
+            </div>
+            <div class="box-details">
+                <span>Event title</span>
+                <span>Location</span>
+                <span>Time and date</span>
+                <span>Price</span>
+            </div>
+        </div-->
+
     </div>
 </body>
 </html>
