A touch in the interface of the pages login, signup, support, retreive password has been done.

--- a/lsrs_support.html
+++ b/lsrs_support.html
@@ -10,43 +10,47 @@
     <script src="js/lsrs_support.js"></script>
 </head>
 <body>
-    <!--Logo and brand name-->
-    <div class="logo_brand">
-        <span class="logo_icon"><img src="media/icons/zimaware-logo-temp.png"/></span>
-        <span><h1>ZIMAT</h1></span>
-    </div>
+    <div class="page-wrapper">
+        <!--Logo and brand name-->
+        <div class="logo_brand">
+            <span class="logo_icon"><img src="media/icons/zimaccess.png"/></span>
+            <span><h1 id="text-logo">ZIMACCESS</h1></span>
+        </div>
 
-    <!--Headlines-->
-    <div class="main_headline">
-        <span><h2>customer service</h2></span>
-        <span id="msg-prompt">Please fill out this form, send it and our team will try to help as soon as possible!</span>
-    </div>
+        <div class="block-login-interface">
+            <!--Headlines-->
+            <div class="main_headline">
+                <span><h2>customer service</h2></span>
+                <span id="msg-prompt">Please fill out this form, send it and our team will try to help as soon as possible!</span>
+            </div>
 
-    <!--Input fields-->
-    <div class="input_box">
-        <span class="input_unit">
-            <input type="email" placeholder="Enter your email" id="idEmail"/>
-            <span id="errorEmail" class="errorText"></span>
-        </span>
-        <span class="input_unit">
-            <textarea id="support-msg" rows="10" cols="50" placeholder="Please explain us what you need help in">
-                I have an issue and I need help. Here you can explain your issue and send it to our team, who will come back to you as soon as  possible.
-            </textarea>
-            <span id="errorSupport" class="errorText"></span>
-        </span>
-        <button id="idBtnSend">Send</button>
-    </div>
+            <!--Input fields-->
+            <div class="input_box">
+                <span class="input_unit">
+                    <input type="email" placeholder="Enter your email" id="idEmail"/>
+                    <span id="errorEmail" class="errorText"></span>
+                </span>
+                <span class="input_unit">
+                    <textarea id="support-msg" rows="10" cols="50" placeholder="Please explain us what you need help in">
+                        I have an issue and I need help. Here you can explain your issue and send it to our team, who will come back to you as soon as  possible.
+                    </textarea>
+                    <span id="errorSupport" class="errorText"></span>
+                </span>
+                <button id="idBtnSend">Send</button>
+            </div>
 
 
-    <!--Utilities links-->
-    <div class="utils_links">
-        <span>New to our platform? <a href="lsrs_signup.html">Create new account now</a></span>
-        <span>Forget your password? <a href="lsrs_retreive.html">Request your password</a></span>
-    </div>
+            <!--Utilities links-->
+            <div class="utils_links">
+                <span>New to our platform? <a href="lsrs_signup.html">Create new account now</a></span>
+                <span>Forget your password? <a href="lsrs_retreive.html">Request your password</a></span>
+            </div>
+        </div>
 
-    <!--Ownership-->
-    <div class="ownership">
-        <span>Owned by zimaware. All rights reserved.</span>
+        <!--Ownership-->
+        <div class="ownership">
+            <span>Owned by zimaware. All rights reserved.</span>
+        </div>
     </div>
 
 </body>
