--- a/lsrs_login.html
+++ b/lsrs_login.html
@@ -10,42 +10,47 @@
     <script src="js/lsrs_login.js"></script>
 </head>
 <body>
-    <!--Logo and brand name-->
-    <div class="logo_brand">
-        <span class="logo_icon"><img src="media/icons/zimaware-logo-temp.png"/></span>
-        <span><h1>ZIMAT</h1></span>
-    </div>
+    <div class="page-wrapper">
+        <!--Logo and brand name-->
+        <div class="logo_brand">
+            <span class="logo_icon"><img src="media/icons/zimaccess.png"/></span>
+            <span><h1 id="text-logo">ZIMACCESS</h1></span>
+        </div>
 
-    <!--Headlines-->
-    <div class="main_headline">
-        <span><h2>Login</h2></span>
-        <span>Login to your account and discover all the experiences that await you!</span>
-    </div>
+        <div class="block-login-interface">
+            <!--Headlines-->
+            <div class="main_headline">
+                <span><h2>Welcome</h2></span>
+                <span>Login to your account and discover all the experiences that await you!</span>
+            </div>
 
-    <!--Input fields-->
-    <div class="input_box">
-        <span class="input_unit">
-            <input type="email" placeholder="Enter your email" id="idEmail"/>
-            <span id="errorEmail" class="errorText"></span>
-        </span>
-        <span class="input_unit">
-            <input type="password" placeholder="Enter your password" id="idPassword"/>
-            <span id="errorPassword" class="errorText"></span>
-        </span>
-        <button id="idBtnLogin">Log in</button>
-    </div>
+            <!--Input fields-->
+            <div class="input_box">
+                <span class="input_unit">
+                    <input type="email" placeholder="Enter your email" id="idEmail"/>
+                    <span id="errorEmail" class="errorText"></span>
+                </span>
+                <span class="input_unit">
+                    <input type="password" placeholder="Enter your password" id="idPassword"/>
+                    <span id="errorPassword" class="errorText"></span>
+                </span>
+                <span><button id="idBtnLogin">Log in</button></span>
+            </div>
 
 
-    <!--Utilities links-->
-    <div class="utils_links">
-        <span>New to our platform? <a href="lsrs_signup.html">Create new account now</a></span>
-        <span>Forget your password? <a href="lsrs_retreive.html">Request your password</a></span>
-        <span>Need help? <a href="lsrs_support.html">Contact our customer service</a></span>
-    </div>
+            <!--Utilities links-->
+            <div class="utils_links">
+                <span>New to our platform? <a href="lsrs_signup.html">Create new account now</a></span>
+                <span>Forget your password? <a href="lsrs_retreive.html">Request your password</a></span>
+                <span>Need help? <a href="lsrs_support.html">Contact our customer service</a></span>
+            </div>
+        </div>
 
-    <!--Ownership-->
-    <div class="ownership">
-        <span>Owned by zimaware. All rights reserved.</span>
+        <!--Ownership-->
+        <div class="ownership">
+            <span>Owned by zimaware. All rights reserved.</span>
+            <span>ZimAccess ©2022</span>
+        </div>
     </div>
 
 </body>
