--- a/lsrs_retreive.html
+++ b/lsrs_retreive.html
@@ -10,58 +10,62 @@
     <script src="js/lsrs_retreive.js"></script>
 </head>
 <body>
-    <!--Logo and brand name-->
-    <div class="logo_brand">
-        <span class="logo_icon"><img src="media/icons/zimaware-logo-temp.png"/></span>
-        <span><h1>ZIMAT</h1></span>
-    </div>
+   <div class="page-wrapper">
+        <!--Logo and brand name-->
+        <div class="logo_brand">
+            <span class="logo_icon"><img src="media/icons/zimaccess.png"/></span>
+            <span><h1 id="text-logo">ZIMACCESS</h1></span>
+        </div>
+        
+        <div class="block-login-interface">
+            <!--Headlines-->
+            <div class="main_headline">
+                <span><h2>Password reset</h2></span>
+                <span id="main-msg">Enter your account email in order to reset your password</span>
+            </div>
 
-    <!--Headlines-->
-    <div class="main_headline">
-        <span><h2>Password reset</h2></span>
-        <span id="main-msg">Enter your account email in order to reset your password</span>
-    </div>
+            <!--Input fields-->
+            <div class="input_box">
+                <span class="input_unit">
+                    <input type="email" placeholder="Enter your email" id="idEmail"/>
+                    <span id="errorEmail" class="errorText"></span>
+                </span>
+                <button id="idRequestCode">Request code</button>
 
-    <!--Input fields-->
-    <div class="input_box">
-        <span class="input_unit">
-            <input type="email" placeholder="Enter your email" id="idEmail"/>
-            <span id="errorEmail" class="errorText"></span>
-        </span>
-        <button id="idRequestCode">Request code</button>
+                <span class="input_unit">
+                    <input type="text" placeholder="Enter the code send to your email" id="idCode"/>
+                    <span id="errorCode" class="errorText"></span>
+                </span>
+                <button id="idBtnSubmitCode">Submit code</button>
+                <p id="receiveNewCode">Receive a new code?</p>
 
-        <span class="input_unit">
-            <input type="text" placeholder="Enter the code send to your email" id="idCode"/>
-            <span id="errorCode" class="errorText"></span>
-        </span>
-        <button id="idBtnSubmitCode">Submit code</button>
-        <p id="receiveNewCode">Receive a new code?</p>
+                <div class="block-pwd-reset">
+                    <span class="input_unit">
+                        <input type="password" placeholder="Enter your new password" id="idNewPwd"/>
+                        <span id="errorNewPwd" class="errorText"></span>
+                    </span>
 
-        <div class="block-pwd-reset">
-            <span class="input_unit">
-                <input type="password" placeholder="Enter your new password" id="idNewPwd"/>
-                <span id="errorNewPwd" class="errorText"></span>
-            </span>
+                    <span class="input_unit">
+                        <input type="password" placeholder="Confirm your new password" id="idConfNewPwd"/>
+                        <span id="errorConfNewPwd" class="errorText"></span>
+                    </span>
+                    <button id="idBtnReset">Reset password</button>
+                </div>
 
-            <span class="input_unit">
-                <input type="password" placeholder="Confirm your new password" id="idConfNewPwd"/>
-                <span id="errorConfNewPwd" class="errorText"></span>
-            </span>
-            <button id="idBtnReset">Reset password</button>
+            </div>
+
+
+            <!--Utilities links-->
+            <div class="utils_links">
+                <span>Need help? <a href="lsrs_support.html">Contact our customer service</a></span>
+            </div>
         </div>
 
-    </div>
-
-
-    <!--Utilities links-->
-    <div class="utils_links">
-        <span>Need help? <a href="lsrs_support.html">Contact our customer service</a></span>
-    </div>
-
-    <!--Ownership-->
-    <div class="ownership">
-        <span>Owned by zimaware. All rights reserved.</span>
-    </div>
+        <!--Ownership-->
+        <div class="ownership">
+            <span>Owned by zimaware. All rights reserved.</span>
+        </div>
+   </div>
 
 </body>
 </html>
