This commit is to prevent code lost if the computer crashed later. I have work on some functionalities that still need improvement. Keep moving foward

--- a/etc_create_event.html
+++ b/etc_create_event.html
@@ -20,6 +20,9 @@
                 <input type="file" name='files[]' multiple id="event-pictures" accept="image/png, image/gif, image/jpeg" style="display: none;">
                 <div><button id="idBtnUploadImg">Choose event image(s)</button></div>
     
+                <label for="for-event-title">Post short message:</label>
+                <span><input type="text" placeholder="Enter a short message to promote your post" id="post-short-msg"/></span>
+
                 <div>
                 <label for="description">Tell us more about your event:</label>
                 <textarea class="description"  rows="5" cols="33" id="id-description">
