--- a/lsrs_signup.html
+++ b/lsrs_signup.html
@@ -4,16 +4,18 @@
     <title>Sign up</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="media/icons/zimaware-logo-temp.png" type="image/icon type">
+    <link rel="icon" href="media/icons/zimaccess_mini.png" type="image/icon type">
     <link rel="stylesheet" href="css/lsrs.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/lsrs_signup.js"></script>
 </head>
 <body>
+    <div class="loading-circle" id="loading-circle"><span class="loadingspinner"></span></div>
+
     <div class="page-wrapper">
             <!--Logo and brand name-->
             <div class="logo_brand">
-                <span class="logo_icon"><img src="media/icons/zimaccess.png"/></span>
+                <!--span class="logo_icon"><img src="media/icons/zimaccess.png"/></span-->
                 <span><h1 id="text-logo">ZIMACCESS</h1></span>
             </div>
         
