--- a/profile.html
+++ b/profile.html
@@ -6,47 +6,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="media/icons/zimaware-logo-temp.png" type="image/icon type">
     <link rel="stylesheet" href="css/profile.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/profile.js"></script>
 </head>
 <body>
 
-    <!--user avatar, name, address, bio-->
-    <div class="container_profile_head">
-
-        <div class="user_main_avatar" id="user_main_avatar">
-            <img src="media/icons/land2.jpg" id="user_main_avatar_img"/>
+    <div class="container-fluid">
+        <div class="card">
+            <div class="image"> <span><img id="userimage" src="https://imgur.com/WInwkB8.jpg"></span>
+                <h3>GOOGLE STARK</h3>
+                <h4>@stark_industries</h4>
+            </div>
+            <div class="arc"> <span></span> </div>
+            <div class="about">
+                <p><u>About</u></p>
+                <p>
+                    Since creating that first suit, Iron Man has gone through numerous events significant to his life.
+                    Since creating that first suit, Iron Man has gone through numerous events significant to his life.
+                </p>
+            </div>
+        
+            <div class="profile-info">
+                <span class="user-stat"><h2>99</h2> <span>POSTS</span></span>
+                <span class="user-stat"><h2>231</h2> <span>FOLLOWING</span></span>
+                <span class="user-stat"><h2>2.1M</h2> <span>FOLLOWERS</span></span>
+            </div>
+            <div class="button"> <button>FOLLOW</button> <button>SHARE</button> <button>EDIT</button> </div>
         </div>
-
-        <div class="block_profile_infos">
-            <div class="user_name_address">
-                <div>
-                    <span>Daniel Moise Montezima</span>
-                    <span><img src="media/icons//verify.png"/></span>
-                </div>
-                <span>Oryol, Russia</span>
-            </div>
-            
-            <div class="user_bio" id="user_bio">
-                <span id="user_bio_text"><!--Display biography of user--></span>
-                <span id="see-more">see more</span>
-                <span id="see-less">see less</span>
-            </div>
-
-            <div class="subscriber_sec">
-                <button class="btn" id="btn-subscribe">Subscribe</button>
-                <span id="total_subscribers">10k</span>
-            </div>
-        </div>
-
     </div>
 
-  
-    <!--Modal full page displayed-->
-    <div class="fullPageDisplay" id="fullPageDisplay">
-        <div class="close-full-screen" id="close-full-screen">close</div>
-        <img src="media/icons/land2.jpg" width="100%" id="fullPageDisplay-img"/>
+    <div class="container-md tab-user-account">
+        <span>Tickets</span>
+        <span>Events</span>
+    </div>
+    <div class="container-md wrapper-contents">
+        <div class="content-tab1">
+            Here is content of tab 1
+        </div>
     </div>
 
+    <!--Bottom nav bar-->
+    <nav class="container-fluid bottom-menu">
+            <li><a href="#"><i class="bi bi-house-door-fill"></i></a><span>Home</span></li>
+            <li><a href="#"><i class="bi bi-wallet-fill"></i></a><span>Account</span></li>
+            <li><a href="#"><i class="bi bi-search"></i></a><span>Search</span></li>
+            <li><a href="#"><i class="bi bi-sliders"></i></a><span>Settings</span></li>
+    </nav>
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
