--- a/profile.html
+++ b/profile.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <script src="js/profile.js"></script>
 </head>
 <body>
@@ -16,24 +17,25 @@
     <div class="container-fluid">
         <div class="card">
             <div class="image"> <span><img id="userimage" src="https://imgur.com/WInwkB8.jpg"></span>
-                <h3>GOOGLE STARK</h3>
-                <h4>@stark_industries</h4>
+                <h3 id="user-fname-lname">GOOGLE STARK</h3>
+                <h4 id="username">@stark_industries</h4>
             </div>
             <div class="arc"> <span></span> </div>
             <div class="about">
                 <p><u>About</u></p>
-                <p>
-                    Since creating that first suit, Iron Man has gone through numerous events significant to his life.
-                    Since creating that first suit, Iron Man has gone through numerous events significant to his life.
+                <p id="bio-container">
+                    <span id="user_bio_text"><!--User bio--></span>
+                    <span id="see-more" style="color: #161010; display: none;">see more...</span>
+                    <span id="see-less" style="color: #161010; display: none;">see less</span>
                 </p>
             </div>
         
             <div class="profile-info">
-                <span class="user-stat"><h2>99</h2> <span>POSTS</span></span>
-                <span class="user-stat"><h2>231</h2> <span>FOLLOWING</span></span>
-                <span class="user-stat"><h2>2.1M</h2> <span>FOLLOWERS</span></span>
+                <span class="user-stat" id="event-tot"><h2>99</h2> <span>POSTS</span></span>
+                <span class="user-stat" id="following-tot"><h2>231</h2> <span>FOLLOWING</span></span>
+                <span class="user-stat" id="followers-tot"><h2>2.1M</h2> <span>FOLLOWERS</span></span>
             </div>
-            <div class="button"> <button>FOLLOW</button> <button>SHARE</button> <button>EDIT</button> </div>
+            <div class="button"> <button id="btn-follow">FOLLOW</button> <button id="btn-unfollow">UNFOLLOW</button> <button id="btn-share">SHARE</button> <button id="btn-edit">EDIT</button> </div>
         </div>
     </div>
 
@@ -42,10 +44,36 @@
         <span>Events</span>
     </div>
     <div class="container-md wrapper-contents">
-        <div class="content-tab1">
-            Here is content of tab 1
+        <div class="content-tab-ticket" id="content-tab-ticket">
+
+            <div class="ticket-wrapper" id="ticket-wrapper">
+                <div class="info-header">
+                    <h4>Event title</h4>
+                    <span>Time:24:00</span>
+                    <span>Place: Oryol</span>
+                </div>
+                <div><button class="generate-qrcode" id="generate-qrcode-1">Generate QRcode</button></div>   
+            </div>
+
         </div>
     </div>
+    <button id="myBtn" style="display: none;">Open Modal</button>
+
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+
+        <!-- Modal content -->
+        <div class="modal-content">
+        <span class="close" id="x-modal">&times;</span>
+            <div class="ticket-content" id="ticket-content">
+                <div class="qrcode" id="qrcode">
+
+                </div>
+            </div>
+        </div>
+    
+  </div>
+
 
     <!--Bottom nav bar-->
     <nav class="container-fluid bottom-menu">
