A bunch of work has been done here. nicer interface for the login system. User can see their events and tickets. They can genrate the ticket QRcode and save it to their phone. Pretty good work keep it upgit status!

--- a/verification.html
+++ b/verification.html
@@ -11,25 +11,14 @@
 </head>
 <body>
 
-    <!--Header-->
-    <div class="header-confirmation">
-        <span>Zimaware</span><span> --- </span><span>email verification</span>
+   <div class="main-wrapper">
+    <div class="box-confirmation">
+        <img src="" alt="confirmation-img" id="confirmation-img" width="100%"/>
     </div>
-
-    <!--Icon/animation verification-->
-    <div class="graphic-verification">
-        <span><img src="#" id="id-img-verification"/></span>
+    <div>
+        <p id="confirmation-msg"></p>
+        <p><a href="lsrs_login.html">Go to home page</a></p>
     </div>
-
-    <!--Message section-->
-    <div class="message-verification">
-        <p id="id-text-verification">ZIMAWARE</p>
-    </div>
-
-    <!--Action buttons-->
-    <div class="btn-verification-actions">
-        <span id="id-btn-acc"><button>Account</button></span>
-        <span id="id-btn-home"><button>Home page</button></span>
-    </div>
+   </div>
 </body>
 </html>
