--- a/lsrs_support.html
+++ b/lsrs_support.html
@@ -1,59 +1,147 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Support</title>
+    <title>ZIMACCESS | Support</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="media/icons/zimaccess_mini.png" type="image/icon type">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/lsrs.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/lsrs_support.js"></script>
 </head>
 <body>
-    <div class="loading-circle" id="loading-circle"><span class="loadingspinner"></span></div>
-
-    <div class="page-wrapper">
-        <!--Logo and brand name-->
-        <div class="logo_brand">
-            <!--span class="logo_icon"><img src="media/icons/zimaccess.png"/></span-->
-            <span><h1 id="text-logo">ZIMACCESS</h1></span>
-        </div>
-
-        <div class="block-login-interface">
-            <!--Headlines-->
-            <div class="main_headline">
-                <span><h2>customer service</h2></span>
-                <span id="msg-prompt">Please fill out this form, send it and our team will try to help as soon as possible!</span>
+  <div class="loading-circle" id="loading-circle">
+    <div class="d-flex justify-content-center">
+      <div class="spinner-border text-primary" style="width: 6rem; height: 6rem;" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+    </div>
+  </div>
+    <div class="feedback-img">
+        <img src="media/icons/feedback.webp" class="img-fluid"/>
+    </div>
+    <div class="box-form" id="box-form">
+        <form>
+            <!-- Email input -->
+            <div class="form-outline mb-4">
+              <label class="form-label" for="form2Example1">Enter a valid email address</label>
+              <input type="email" class="form-control" id="idEmail" />
+              <span id="errorEmail" class="error-text"></span>
+            </div>
+          
+            <div class="form-outline">
+                <label class="form-label" for="textAreaExample2">Tell us your issue</label>
+                <textarea class="form-control" rows="8" id="support-msg"></textarea>
+                <span id="errorSupport" class="error-text"></span>
             </div>
 
-            <!--Input fields-->
-            <div class="input_box">
-                <span class="input_unit">
-                    <input type="email" placeholder="Enter your email" id="idEmail"/>
-                    <span id="errorEmail" class="errorText"></span>
-                </span>
-                <span class="input_unit">
-                    <textarea id="support-msg" rows="10" cols="50" placeholder="Please explain us what you need help in">
-                        I have an issue and I need help. Here you can explain your issue and send it to our team, who will come back to you as soon as  possible.
-                    </textarea>
-                    <span id="errorSupport" class="errorText"></span>
-                </span>
-                <button id="idBtnSend">Send</button>
-            </div>
-
-
-            <!--Utilities links-->
-            <div class="utils_links">
-                <span>New to our platform? <a href="lsrs_signup.html">Create new account now</a></span>
-                <span>Forget your password? <a href="lsrs_retreive.html">Request your password</a></span>
-            </div>
-        </div>
-
-        <!--Ownership-->
-        <div class="ownership">
-            <span>Owned by zimaware. All rights reserved.</span>
-        </div>
+            <button type="button" class="btn btn-primary btn-rounded mt-5" id="idBtnSend">Submit</button>
+          </form>
     </div>
 
+    <div id="alert-support-page"><!--Support sent success alert--></div>
+
+   <!-- Footer -->
+<footer class="text-center text-lg-start bg-light text-muted">
+  <!-- Section: Social media -->
+  <section
+    class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"
+  >
+    <!-- Left -->
+    <div class="me-5 d-none d-lg-block">
+      <span>Get connected with us on social networks:</span>
+    </div>
+    <!-- Left -->
+
+    <!-- Right -->
+    <div>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-facebook-f"></i>
+      </a>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-twitter"></i>
+      </a>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-google"></i>
+      </a>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-instagram"></i>
+      </a>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-linkedin"></i>
+      </a>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-github"></i>
+      </a>
+    </div>
+    <!-- Right -->
+  </section>
+  <!-- Section: Social media -->
+
+  <!-- Section: Links  -->
+  <section class="">
+    <div class="container text-center text-md-start mt-5">
+      <!-- Grid row -->
+      <div class="row mt-3">
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+          <!-- Content -->
+          <h6 class="text-uppercase fw-bold mb-4">
+            <i class="fas fa-gem me-3"></i>ZIMACCESS
+          </h6>
+          <p>
+            Scan your way to the other side!
+          </p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold mb-4">
+            Useful links
+          </h6>
+          <p>
+            <a href="lsrs_login.html" class="text-reset">login</a>
+          </p>
+          <p>
+            <a href="lsrs_signup.html" class="text-reset">signup</a>
+          </p>
+
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold mb-4">
+            Contact
+          </h6>
+          <p><i class="fas fa-home me-3"></i> Mopra 16, Oryol, Russia</p>
+          <p>
+            <i class="fas fa-envelope me-3"></i>
+            zimaware@gmail.com
+          </p>
+          <p><i class="fas fa-phone me-3"></i> + 7 996 160 5155</p>
+          <p><i class="fas fa-print me-3"></i> + 509 37 23 5549</p>
+        </div>
+        <!-- Grid column -->
+      </div>
+      <!-- Grid row -->
+    </div>
+  </section>
+  <!-- Section: Links  -->
+
+  <!-- Copyright -->
+  <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+    © 2022 Copyright:
+    <a class="text-reset fw-bold" href="www.zimaware.com">www.zimaware.com</a>
+  </div>
+  <!-- Copyright -->
+</footer>
+<!-- Footer -->
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
