Search functionality and follow unfollow developped. Keep it up bro

--- a/etc_home.html
+++ b/etc_home.html
@@ -32,7 +32,7 @@
                 <div class="status-wrapper" id="status-wrapper">
 
                     <div class="status-card">
-                        <div class="search-user"><a href="#"><img src="media/icons/find-user.png" alt="find-user-icon"></a></div>
+                        <div class="search-user"><a href="etc_search.html?type=user"><img src="media/icons/find-user.png" alt="find-user-icon"></a></div>
                         <p class="username">Find user</p>
                     </div>
 
@@ -203,7 +203,7 @@
 
             <div class="app-navigation-container-icon">
 
-                <a href="#0">
+                <a href="etc_search.html?type=all">
 
                     <i class="bi bi-search"></i>
 
@@ -213,7 +213,7 @@
 
             <div class="app-navigation-container-icon">
 
-                <a href="#0" id="profile-link2">
+                <a href="#" id="profile-link2">
 
                     <i class="bi bi-person-circle"></i>
 
@@ -243,7 +243,7 @@
 
             <div class="app-navigation-container-icon">
 
-                <a href="" id="logout">
+                <a id="logout">
 
                     <i class="bi bi-box-arrow-left"></i>
 
