--- a/profile.html
+++ b/profile.html
@@ -16,9 +16,9 @@
 
     <div class="container-fluid">
         <div class="card">
-            <div class="image"> <span><img id="userimage" src="https://imgur.com/WInwkB8.jpg"></span>
-                <h3 id="user-fname-lname">GOOGLE STARK</h3>
-                <h4 id="username">@stark_industries</h4>
+            <div class="image"> <span><img id="userimage" src="media/icons/user-icon.png"></span>
+                <h3 id="user-fname-lname"></h3>
+                <h4 id="username"></h4>
             </div>
             <div class="arc"> <span></span> </div>
             <div class="about">
@@ -31,57 +31,104 @@
             </div>
         
             <div class="profile-info">
-                <span class="user-stat" id="event-tot"><h2>99</h2> <span>POSTS</span></span>
-                <span class="user-stat" id="following-tot"><h2>231</h2> <span>FOLLOWING</span></span>
-                <span class="user-stat" id="followers-tot"><h2>2.1M</h2> <span>FOLLOWERS</span></span>
+                <span class="user-stat" id="event-tot"><h2>0</h2> <span>POSTS</span></span>
+                <span class="user-stat" id="following-tot"><h2>0</h2> <span>FOLLOWING</span></span>
+                <span class="user-stat" id="followers-tot"><h2>0</h2> <span>FOLLOWERS</span></span>
             </div>
-            <div class="button"> <button id="btn-follow">FOLLOW</button> <button id="btn-unfollow">UNFOLLOW</button> <button id="btn-share">SHARE</button> <button id="btn-edit">EDIT</button> </div>
-        </div>
-    </div>
-
-    <div class="container-md tab-user-account">
-        <span>Tickets</span>
-        <span>Events</span>
-    </div>
-    <div class="container-md wrapper-contents">
-        <div class="content-tab-ticket" id="content-tab-ticket">
-
-            <div class="ticket-wrapper" id="ticket-wrapper">
-                <div class="info-header">
-                    <h4>Event title</h4>
-                    <span>Time:24:00</span>
-                    <span>Place: Oryol</span>
-                </div>
-                <div><button class="generate-qrcode" id="generate-qrcode-1">Generate QRcode</button></div>   
-            </div>
-
-        </div>
-    </div>
-    <button id="myBtn" style="display: none;">Open Modal</button>
-
-    <!-- The Modal -->
-    <div id="myModal" class="modal">
-
-        <!-- Modal content -->
-        <div class="modal-content">
-        <span class="close" id="x-modal">&times;</span>
-            <div class="ticket-content" id="ticket-content">
-                <div class="qrcode" id="qrcode">
-
-                </div>
+            <div class="button" id="button-action"> 
+                <!--button id="btn-follow">FOLLOW</button> 
+                <button id="btn-unfollow">UNFOLLOW</button> 
+                <button id="btn-share">SHARE</button> 
+                <button id="btn-edit">EDIT</button-->
             </div>
         </div>
-    
-  </div>
-
+    </div>
 
     <!--Bottom nav bar-->
-    <nav class="container-fluid bottom-menu">
+    <!--nav class="container-fluid bottom-menu">
             <li><a href="#"><i class="bi bi-house-door-fill"></i></a><span>Home</span></li>
             <li><a href="#"><i class="bi bi-wallet-fill"></i></a><span>Account</span></li>
             <li><a href="#"><i class="bi bi-search"></i></a><span>Search</span></li>
             <li><a href="#"><i class="bi bi-sliders"></i></a><span>Settings</span></li>
+    </nav-->
+
+    <!--Mobile bottom navigation bar-->
+    <nav class="app-navigation">
+
+        <div class="app-navigation-container">
+
+            <div class="app-navigation-container-header">
+
+                Menu
+
+            </div>
+
+            <div class="app-navigation-container-icons">
+
+                <div class="app-navigation-container-icon">
+
+                    <a href="etc_home.html">
+
+                        <i class="bi bi-house-fill"></i>
+
+                    </a>
+
+                </div>
+
+                <div class="app-navigation-container-icon">
+
+                    <a href="etc_search.html?type=all">
+
+                        <i class="bi bi-search"></i>
+
+                    </a>
+
+                </div>
+
+                <div class="app-navigation-container-icon">
+
+                    <a href="#0">
+
+                        <i class="bi bi-sliders"></i>
+
+                    </a>
+
+                </div>
+
+                <div class="app-navigation-container-icon">
+
+                    <a href="etc_create_event.html">
+
+                        <i class="bi bi-plus-circle-fill"></i>
+
+                    </a>
+
+                </div>
+
+                <div class="app-navigation-container-icon">
+
+                    <a href="" id="logout">
+
+                        <i class="bi bi-box-arrow-left"></i>
+
+                    </a>
+
+                </div>
+
+            </div>
+
+        </div>
+
+
+        <div class="app-navigation-toggle">
+
+            <!--i class="fa fa-th"></i-->
+            <i class="bi bi-menu-app-fill" style="font-size: 26px; color: black;"></i>
+
+        </div>
+
     </nav>
+
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
