Task to correct some functionalities already done (user suggestions), correct some padding, margins and change some icons and improve some links dispositions

--- a/lsrs_login.html
+++ b/lsrs_login.html
@@ -70,7 +70,7 @@
                     style="padding-left: 2.5rem; padding-right: 2.5rem;" id="idBtnLogin">Login</button>
                   <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a href="lsrs_signup.html"
                       class="link-danger">Register</a></p>
-                    <p class="small fw-bold mt-2 pt-1 mb-0">Have you encountered an issue? <a href="#!"
+                    <p class="small fw-bold mt-2 pt-1 mb-0">Have you encountered an issue? <a href="lsrs_support.html"
                         class="link-warning">Feedback</a></p>
                 </div>
       
