--- a/lsrs_retreive.html
+++ b/lsrs_retreive.html
@@ -58,7 +58,7 @@
         
             <!-- Register buttons -->
             <div class="text-center">
-                <p>Not a member? <a href="lsrs_signup.html">Register</a></p>
+                <p>Want to log in? <a href="lsrs_login.html">Login now</a></p>
                 <p>Need help?<a href="lsrs_support.html">contact us</a></p>
             </div>
             </form>
