--- a/lsrs_support.html
+++ b/lsrs_support.html
@@ -31,7 +31,7 @@
             </div>
           
             <div class="form-outline">
-                <label class="form-label" for="textAreaExample2">Tell us your issue</label>
+                <label class="form-label" for="textAreaExample2">Tell us your issue or send a feedback</label>
                 <textarea class="form-control" rows="8" id="support-msg"></textarea>
                 <span id="errorSupport" class="error-text"></span>
             </div>
@@ -136,7 +136,7 @@
   <!-- Copyright -->
   <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
     © 2022 Copyright:
-    <a class="text-reset fw-bold" href="www.zimaware.com">www.zimaware.com</a>
+    <a class="text-reset fw-bold" href="http://www.zimaware.com">www.zimaware.com</a>
   </div>
   <!-- Copyright -->
 </footer>
