--- a/profile.html
+++ b/profile.html
@@ -44,6 +44,28 @@
         </div>
     </div>
 
+    <div class="container container-events-flip-card" id="container-events-flip-card">
+        
+        <!--div class="wrapper-flip-card">
+            <div class="scene scene--card">
+                <div class="card-event">
+                  <div class="card__face card__face--front">
+                      <img id="img-poster-flip" src="media/icons/cover 11.png" width="100%" height="100%"/>
+                  </div>
+                  <div class="card__face card__face--back" id="back-card-flip">
+                      <span><span><img src="media/icons/clock.png"/></span>22:22:22</span>
+                      <span><span><img src="media/icons/location.png"/></span>22:22:22</span>
+                      <span><span><img src="media/icons/price.png"/></span>22:22:22</span>
+                  </div>
+                </div>
+            </div>
+            <div class="container-btn">
+                <button>View event</button>
+            </div>
+        </div-->
+
+    </div>
+
     <!--Bottom nav bar-->
     <!--nav class="container-fluid bottom-menu">
             <li><a href="#"><i class="bi bi-house-door-fill"></i></a><span>Home</span></li>
