--- a/lsrs_signup.html
+++ b/lsrs_signup.html
@@ -81,7 +81,7 @@
                     style="padding-left: 2.5rem; padding-right: 2.5rem;" id="idBtnSignUp">Sign up</button>
                   <p class="small fw-bold mt-2 pt-1 mb-0">Already have an account? <a href="lsrs_login.html"
                       class="link-danger">Login</a></p>
-                  <p class="small fw-bold mt-2 pt-1 mb-0">Have you encountered an issue? <a href="#!"
+                  <p class="small fw-bold mt-2 pt-1 mb-0">Have you encountered an issue? <a href="lsrs_support.html"
                         class="link-warning">Feedback</a></p>
                 </div>
       
