We have implemented the tag user to ticket, add loaders, create security code, take commision per ticket sale

--- a/etc_create_event.html
+++ b/etc_create_event.html
@@ -12,6 +12,13 @@
     <script src="js/etc_create_event.js"></script>
 </head>
 <body>
+
+     <!--Creating loading custom spinning loader-->
+     <div class="bg-transpa" id="zima-loader">
+        <div class="loader"></div>
+        <div class="text-loading-container" id="text-loading"></div>
+    </div>
+    
         <div class="page-top-bar">
            <a href="etc_home.html"><i class="bi bi-arrow-left"></i></a>
             <h1>Create event</h1>
@@ -31,7 +38,7 @@
 
                 <div>
                 <label for="description">Tell us more about your event:</label>
-                <textarea class="form-control"  rows="5" id="id-description">
+                <textarea class="form-control"  rows="5" id="id-description" name="description-area">
                    
                 </textarea>
                 </div>
