--- a/webscanner.html
+++ b/webscanner.html
@@ -11,6 +11,13 @@
     <script src="js/webscanner.js"></script>
 </head>
 <body>
+
+     <!--Creating loading custom spinning loader-->
+     <div class="bg-transpa" id="zima-loader">
+        <div class="loader"></div>
+        <div class="text-loading-container" id="text-loading"></div>
+    </div>
+    
    <div class="box-center-content">
         <div class="box-niv-2">
             <div class="box-illustration">
