--- a/etc_display_event.html
+++ b/etc_display_event.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="media/icons/zimaware-logo-temp.png" type="image/icon type">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/etc_display_event.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/etc_display_event.js"></script>
@@ -16,6 +17,11 @@
         <div class="loader"></div>
         <div class="text-loading-container" id="text-loading"></div>
     </div>
+
+    <div class="page-top-bar">
+      <a href="javascript:history.back()"><i class="bi bi-arrow-left"></i></a>
+       <h1>Back</h1>
+   </div>
   
   <div class="wrapper-event-to-display" id="wrapper-event-to-display">
       <!--Place to display the event-->
@@ -29,11 +35,20 @@
         <span>Location</span>
       </div>
       <div class="link-unit">
-        <a href="#"><img src="media/icons/facebook.png"/></a>
-        <a href="#"><img src="media/icons/instagram.png"/></a>
-        <a href="#"><img src="media/icons/whatsapp.png"/></a>
+        <a href="#"><i class="bi bi-facebook"></i></a>
+        <a href="#"><i class="bi bi-instagram"></i></a>
+        <a href="#"><i class="bi bi-whatsapp"></i></a>
       </div>
     </div-->
+
+    <!--div class="agent-unit">
+      <div class="info-unit">
+       <span>You are offline</span>
+       </div>
+       <div class="link-unit">
+       <button>Log in</button>
+       <button>Create account</button>
+       </div></div-->
 
   </div>
 
