--- a/lsrs_signup.html
+++ b/lsrs_signup.html
@@ -90,7 +90,7 @@
           </div>
         </div>
     
-        <div class="d-flex flex-column flex-md-row text-center text-md-start justify-content-between py-4 px-4 px-xl-5 bg-primary w-100" style="position: relative; bottom: 0px;">
+        <div class="d-flex flex-column flex-md-row text-center text-md-start justify-content-between py-4 px-4 px-xl-5 bg-dark w-100" style="position: relative; bottom: 0px;">
           <!-- Copyright -->
           <div class="text-white mb-3 mb-md-0">
             Copyright © 2020. All rights reserved.
