--- a/lsrs_support.html
+++ b/lsrs_support.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="media/icons/zimaccess_mini.png" type="image/icon type">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/lsrs.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -18,30 +19,31 @@
       </div>
     </div>
   </div>
-    <div class="feedback-img">
-        <img src="media/icons/feedback.webp" class="img-fluid"/>
-    </div>
-    <div class="box-form" id="box-form">
-        <form>
-            <!-- Email input -->
-            <div class="form-outline mb-4">
-              <label class="form-label" for="form2Example1">Enter a valid email address</label>
-              <input type="email" class="form-control" id="idEmail" />
-              <span id="errorEmail" class="error-text"></span>
-            </div>
-          
-            <div class="form-outline">
-                <label class="form-label" for="textAreaExample2">Tell us your issue or send a feedback</label>
-                <textarea class="form-control" rows="8" id="support-msg"></textarea>
-                <span id="errorSupport" class="error-text"></span>
-            </div>
+  <div class="body-pic-input">
+      <div class="feedback-img">
+          <img src="media/icons/feedback.webp" class="img-fluid" width="100%" />
+      </div>
+      <div class="box-form" id="box-form">
+          <form>
+              <!-- Email input -->
+              <div class="form-outline mb-4">
+                <label class="form-label" for="form2Example1">Enter a valid email address</label>
+                <input type="email" class="form-control" id="idEmail" />
+                <span id="errorEmail" class="error-text"></span>
+              </div>
+            
+              <div class="form-outline">
+                  <label class="form-label" for="textAreaExample2">Tell us your issue or send a feedback</label>
+                  <textarea class="form-control" rows="8" id="support-msg"></textarea>
+                  <span id="errorSupport" class="error-text"></span>
+              </div>
 
-            <button type="button" class="btn btn-primary btn-rounded mt-5" id="idBtnSend">Submit</button>
-          </form>
-    </div>
+              <button type="button" class="btn btn-primary btn-rounded mt-5" id="idBtnSend">Submit</button>
+            </form>
+      </div>
 
-    <div id="alert-support-page"><!--Support sent success alert--></div>
-
+      <div id="alert-support-page"><!--Support sent success alert--></div>
+  </div>
    <!-- Footer -->
 <footer class="text-center text-lg-start bg-light text-muted">
   <!-- Section: Social media -->
@@ -56,24 +58,10 @@
 
     <!-- Right -->
     <div>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-facebook-f"></i>
-      </a>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-twitter"></i>
-      </a>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-google"></i>
-      </a>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-instagram"></i>
-      </a>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-linkedin"></i>
-      </a>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-github"></i>
-      </a>
+      <a href="" class="me-4 text-reset"><i class="bi bi-facebook"></i></a>
+      <a href="" class="me-4 text-reset"><i class="bi bi-twitter"></i></a>
+      <a href="" class="me-4 text-reset"><i class="bi bi-instagram"></i></a>
+  
     </div>
     <!-- Right -->
   </section>
@@ -136,7 +124,7 @@
   <!-- Copyright -->
   <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
     © 2022 Copyright:
-    <a class="text-reset fw-bold" href="http://www.zimaware.com">www.zimaware.com</a>
+    <span class="text-reset fw-bold">All right reserved</span>
   </div>
   <!-- Copyright -->
 </footer>
