At this point I will put this version as betha on github. The rest of modications are intented to be done on the server

--- a/etc_display_event.html
+++ b/etc_display_event.html
@@ -28,28 +28,7 @@
       
   </div>
   <div class="wrapper-agents" id="wrapper-agents">
-
-    <!--div class="agent-unit">
-      <div class="info-unit">
-        <span>Username</span>
-        <span>Location</span>
-      </div>
-      <div class="link-unit">
-        <a href="#"><i class="bi bi-facebook"></i></a>
-        <a href="#"><i class="bi bi-instagram"></i></a>
-        <a href="#"><i class="bi bi-whatsapp"></i></a>
-      </div>
-    </div-->
-
-    <!--div class="agent-unit">
-      <div class="info-unit">
-       <span>You are offline</span>
-       </div>
-       <div class="link-unit">
-       <button>Log in</button>
-       <button>Create account</button>
-       </div></div-->
-
+    <!--Wrapper agents-->
   </div>
 
   <!--Modal for number of ticket and card details-->
