--- a/lsrs_login.html
+++ b/lsrs_login.html
@@ -87,13 +87,13 @@
           <!-- Section: Social media -->
           <section class="mb-4">
             <!-- Facebook -->
-            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="bi bi-facebook"></i></a>
+            <a class="btn btn-outline-light btn-floating m-1" href="https://lm.facebook.com/l.php?u=https://fb.me/zimaccessM6&h=AT1ZMOL6WRNQ57YlHC8kHxwk-Y4jUE1Mj6xiE4kJERumNMNpuRKZ1tPWPJWuE2ClrjsWPGHn8GsnvxzhREQQzrEBqDPkP2nniTZvG4cVpsYB4WCqREq5t6jVPMxZMgM9952xQA" role="button"><i class="bi bi-facebook"></i></a>
 
             <!-- Twitter -->
-            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"> <i class="bi bi-twitter"></i></a>
+            <a class="btn btn-outline-light btn-floating m-1" href="https://twitter.com/zimaware?t=J_3DIfSdglyKX8d3JHdqcw&s=09" role="button"> <i class="bi bi-twitter"></i></a>
 
             <!-- Instagram -->
-            <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"> <i class="bi bi-instagram"></i></a>
+            <a class="btn btn-outline-light btn-floating m-1" href="https://instagram.com/zimaccess_official?igshid=YmMyMTA2M2Y=" role="button"> <i class="bi bi-instagram"></i></a>
 
           </section>
           <!-- Section: Social media -->
