--- a/lsrs_signup.html
+++ b/lsrs_signup.html
@@ -99,17 +99,14 @@
       
           <!-- Right -->
           <div class="bottom-socials">
-            <a href="#!" class="text-white me-4">
+            <a href="https://lm.facebook.com/l.php?u=https://fb.me/zimaccessM6&h=AT1ZMOL6WRNQ57YlHC8kHxwk-Y4jUE1Mj6xiE4kJERumNMNpuRKZ1tPWPJWuE2ClrjsWPGHn8GsnvxzhREQQzrEBqDPkP2nniTZvG4cVpsYB4WCqREq5t6jVPMxZMgM9952xQA" class="text-white me-4">
                 <i class="bi bi-facebook"></i>
             </a>
-            <a href="#!" class="text-white me-4">
+            <a href="https://twitter.com/zimaware?t=J_3DIfSdglyKX8d3JHdqcw&s=09" class="text-white me-4">
                 <i class="bi bi-twitter"></i>
             </a>
-            <a href="#!" class="text-white me-4">
+            <a href="https://instagram.com/zimaccess_official?igshid=YmMyMTA2M2Y=" class="text-white me-4">
                 <i class="bi bi-instagram"></i>
-            </a>
-            <a href="#!" class="text-white">
-              <i class="fab fa-linkedin-in"></i>
             </a>
           </div>
           <!-- Right -->
