--- a/lsrs_support.html
+++ b/lsrs_support.html
@@ -58,9 +58,9 @@
 
     <!-- Right -->
     <div>
-      <a href="" class="me-4 text-reset"><i class="bi bi-facebook"></i></a>
-      <a href="" class="me-4 text-reset"><i class="bi bi-twitter"></i></a>
-      <a href="" class="me-4 text-reset"><i class="bi bi-instagram"></i></a>
+      <a href="https://lm.facebook.com/l.php?u=https://fb.me/zimaccessM6&h=AT1ZMOL6WRNQ57YlHC8kHxwk-Y4jUE1Mj6xiE4kJERumNMNpuRKZ1tPWPJWuE2ClrjsWPGHn8GsnvxzhREQQzrEBqDPkP2nniTZvG4cVpsYB4WCqREq5t6jVPMxZMgM9952xQA" class="me-4 text-reset"><i class="bi bi-facebook"></i></a>
+      <a href="https://twitter.com/zimaware?t=J_3DIfSdglyKX8d3JHdqcw&s=09" class="me-4 text-reset"><i class="bi bi-twitter"></i></a>
+      <a href="https://instagram.com/zimaccess_official?igshid=YmMyMTA2M2Y=" class="me-4 text-reset"><i class="bi bi-instagram"></i></a>
   
     </div>
     <!-- Right -->
