--- a/lsrs_support.html
+++ b/lsrs_support.html
@@ -104,7 +104,7 @@
         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
           <!-- Links -->
           <h6 class="text-uppercase fw-bold mb-4">
-            Contact
+            Contacts
           </h6>
           <p><i class="fas fa-home me-3"></i> Mopra 16, Oryol, Russia</p>
           <p>
@@ -123,8 +123,8 @@
 
   <!-- Copyright -->
   <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-    © 2022 Copyright:
-    <span class="text-reset fw-bold">All right reserved</span>
+    Copyright © 2022 Zimaccess.<br/>
+    <span class="text-reset fw-bold">All rights reserved.</span>
   </div>
   <!-- Copyright -->
 </footer>
