Some work has been done create_event and diplay_event_one.

--- a/etc_create_event.html
+++ b/etc_create_event.html
@@ -124,8 +124,7 @@
                 <!--span>Error #1</span-->
             </p>
             <div class="box-action-btns" id="box-action-btns">
-                <a href="#" id="see-event-iacc-link"><button type="button" class="btn btn-light">See event in my account</button></a>
-                <a href="#" id="event-settings-link"><button type="button" class="btn btn-light">Event settings</button></a>
+                <a href="etc_home.html" id="event-settings-link"><button type="button" class="btn btn-light">Home page</button></a>
                 <a href="etc_create_event.html" id="create-event-link"><button type="button" class="btn btn-light">Create new event</button></a>   
             </div>
 
@@ -151,8 +150,7 @@
             <div class="text-center p-3" style="background-color: #fff;  border-top: 1px solid #dfdfdf;">
                 <a class="text-dark" href="lsrs_support.html">Need help? Reach to our support team</a><br/>
                 
-              © 2022 Copyright:
-              <a class="text-dark" href="https://www.zimaware.com">Zimaware Inc.</a>
+            Copyright © 2022 Zimaccess. All rights reserved.
             </div>
             <!-- Copyright -->
           </footer>
