--- a/etc_display_event.html
+++ b/etc_display_event.html
@@ -4,7 +4,7 @@
     <title>Display event</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="media/icons/zimaware-logo-temp.png" type="image/icon type">
+    <link rel="icon" href="media/icons/zimaccess_mini.png" type="image/icon type">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/etc_display_event.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -19,8 +19,10 @@
     </div>
 
     <div class="page-top-bar">
-      <a href="javascript:history.back()"><i class="bi bi-arrow-left"></i></a>
-       <h1>Back</h1>
+      <a href="javascript:history.back()">
+        <i class="bi bi-arrow-left"></i>
+        <h1>Back</h1>
+      </a>
    </div>
   
   <div class="wrapper-event-to-display" id="wrapper-event-to-display">
@@ -42,7 +44,7 @@
         <div class="summary-box">
           <span class="small-header-unit">
             <span>Event</span>
-            <img id="img-event-mini-preview" src="media/posters/sternPost2.png"/>
+            <img id="img-event-mini-preview" src="#"/>
           </span>
 
           <span class="small-header-unit">
