Trying to add the first logo of zimaccess and correcting bug in create event page

--- a/etc_home.html
+++ b/etc_home.html
@@ -21,7 +21,7 @@
 
    <nav class="navbar">
         <div class="nav-wrapper">
-            <span class="logo-n-version"><h1 class="zimaccess-logo">ZIMACCESS</h1><span class="logo-beta">Beta</span></span>
+            <span class="logo-n-version"><img src="media/icons/zimaccess_logo.jpeg" alt="ZIMACCESS"/><!--h1 class="zimaccess-logo">ZIMACCESS</h1--></span>
             <div class="nav-items">
                 <a href="lsrs_login.html" id="profile-link"><img src="media/icons/user-icon.png" class="icon" alt="" id="profile-img" style="border: 3px solid #9c9a9a; border-radius: 100%; width: 30px; height: 30px;"></a>
             </div>
