Adding reference fee option and correcting some bugs

--- a/lsrs_signup.html
+++ b/lsrs_signup.html
@@ -63,6 +63,13 @@
                 <input type="password" id="idPasswordConf" class="form-control" />
                 <span class="error-text" id="errorPasswordConf"></span>
               </div>
+
+               <!-- username input for reference -->
+               <div class="form-outline">
+                <label class="form-label" for="typeUsername">Reference(optional)</label>
+                <input type="text" id="refUsername" class="form-control" />
+                <span class="error-text" id="errorUsername2"></span>
+              </div>
       
                 <div class="d-flex justify-content-between align-items-center">
                   <!-- Checkbox -->
